:fire: Refactorings